added (some) colors

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -11,7 +11,7 @@
         <img src="./assets/frc1721.svg" alt="Team 1721 Logo" class="header-logo">
         <img src="./assets/frc1721.svg" alt="Team 1721 Logo" class="header-logo">
         <img src="./assets/frc1721.svg" alt="Team 1721 Logo" class="header-logo">
-        <p class="header-text">TEAM 1721 >--< DASHBOARD</p>
+        <p class="header-text">TEAM 1721 ---<>--- DASHBOARD</p>
     </header>
 
 
@@ -52,15 +52,15 @@
             <div id="info-two" class="table">
                 <div class="table-info">
                     <div class="table-label">NT Websocket</div>
-                    <div class="table-area connectstate">Unknown</div>
+                    <div id="connectstate" class="table-area">Unknown</div>
                 </div>
                 <div class="table-info">
                     <div class="table-label">Robot State</div>
-                    <div class="table-area robotstate">Unknown</div>
+                    <div id="robotstate" class="table-area">Unknown</div>
                 </div>
                 <div class="table-info">
                     <div class="table-label">Address</div>
-                    <div class="table-area robotAddress">Disconnected</div>
+                    <div id="robotAddress" class="table-area">Disconnected</div>
                 </div>
             </div>
     
