Sorta demos a working diff drive?

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -20,8 +20,7 @@
     <frc-dashboard onload="ntLoaded()">
         <div class="main-wrapper">
             <main>
-
-                <frc-number-bar source-key="/SmartDashboard/Test/test"></frc-number-bar>
+                <frc-differential-drivebase source-key="/SmartDashboard/Drivetrain"></frc-differential-drivebase>
 
                 <div id="info-one">
                     <div class="table build-info">
