--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -92,24 +92,24 @@
               </div>
             </div>
           </div>
+
+          <div class="table nt-info">
+            <div class="table-info">
+              <div class="table-label">NT Websocket</div>
+              <div id="connectstate" class="table-area">Unknown</div>
+            </div>
+            <div class="table-info">
+              <div class="table-label">Robot State</div>
+              <div id="robotstate" class="table-area">Unknown</div>
+            </div>
+            <div class="table-info">
+              <div class="table-label">Address</div>
+              <div id="robotAddress" class="table-area">Disconnected</div>
+            </div>
+          </div>
         </div>
 
-        <div id="info-two" class="table">
-          <div class="table-info">
-            <div class="table-label">NT Websocket</div>
-            <div id="connectstate" class="table-area">Unknown</div>
-          </div>
-          <div class="table-info">
-            <div class="table-label">Robot State</div>
-            <div id="robotstate" class="table-area">Unknown</div>
-          </div>
-          <div class="table-info">
-            <div class="table-label">Address</div>
-            <div id="robotAddress" class="table-area">Disconnected</div>
-          </div>
-        </div>
-
-        <div id="info-three"></div>
+        <div id="info-two"></div>
 
         <div id="raw-nt">
           <div id="raw-title">Raw NT Table</div>
