added autonomous selector

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -109,7 +109,13 @@
           </div>
         </div>
 
-        <div id="info-two"></div>
+        <div id="aut-sel"></div>
+
+        <div id="info-field">
+          <div class="left-diff-container"></div>
+          <div id="info-field-canvas"></div>
+          <div class="right-diff-container"></div>
+        </div>
 
         <div id="raw-nt">
           <div id="raw-title">Raw NT Table</div>
