--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -1,134 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>1721 Dashboard</title>
-    <link rel="stylesheet" href="./style.sass" />
-    <link rel="shortcut icon" href="./assets/frc1721.svg" type="image/x-icon" />
-  </head>
-  <body>
-    <header class="header">
-      <img
-        src="./assets/frc1721.svg"
-        alt="Team 1721 Logo"
-        class="header-logo"
-      />
-      <img
-        src="./assets/frc1721.svg"
-        alt="Team 1721 Logo"
-        class="header-logo"
-      />
-      <img
-        src="./assets/frc1721.svg"
-        alt="Team 1721 Logo"
-        class="header-logo"
-      />
-      <p class="header-text">TEAM 1721 ---<>--- DASHBOARD</p>
-    </header>
+	<head>
+		<meta charset="utf-8" />
+		<title>1721 Dashboard</title>
+		<link rel="stylesheet" href="./style.sass" />
+		<link
+			rel="shortcut icon"
+			href="./assets/frc1721.svg"
+			type="image/x-icon"
+		/>
+	</head>
+	<body>
+		<header class="header">
+			<img
+				src="./assets/frc1721.svg"
+				alt="Team 1721 Logo"
+				class="header-logo"
+			/>
+			<img
+				src="./assets/frc1721.svg"
+				alt="Team 1721 Logo"
+				class="header-logo"
+			/>
+			<img
+				src="./assets/frc1721.svg"
+				alt="Team 1721 Logo"
+				class="header-logo"
+			/>
+			<p class="header-text">TEAM 1721 ---<>--- DASHBOARD</p>
+		</header>
 
-    <div class="main-wrapper">
-      <main>
-        <input
-          type="range"
-          id="sd-test"
-          class="dub-slider"
-          min="0"
-          max="4"
-          data-key="/SmartDashboard/Test/test"
-        />
+		<div class="main-wrapper">
+			<main>
+				<input
+					type="range"
+					id="sd-test"
+					class="dub-slider"
+					min="0"
+					max="4"
+					data-key="/SmartDashboard/Test/test"
+				/>
 
-        <div id="info-one">
-          <div class="table build-info">
-            <div class="table-info">
-              <div class="table-label">Build Date</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/BuildData/deploy-date"
-                id="build-date-area"
-              ></div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Build Host</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/BuildData/deploy-host"
-                id="build-host-area"
-              ></div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Builder</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/BuildData/deploy-user"
-                id="builder-area"
-              ></div>
-            </div>
-          </div>
-          <div class="table git-info">
-            <div class="table-info">
-              <div class="table-label">Git Branch</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/BuildData/git-branch"
-                id="git-branch-area"
-              ></div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Git Hash</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/BuildData/git-desc"
-                id="git-hash-area"
-              ></div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Test</div>
-              <div
-                class="table-area dub-text"
-                data-key="/SmartDashboard/Test/test"
-                id="ntmtst"
-              >
-                idiot
-              </div>
-            </div>
-          </div>
+				<div id="info-one">
+					<div class="table build-info">
+						<div class="table-info">
+							<div class="table-label">Build Date</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/BuildData/deploy-date"
+								id="build-date-area"
+							></div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Build Host</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/BuildData/deploy-host"
+								id="build-host-area"
+							></div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Builder</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/BuildData/deploy-user"
+								id="builder-area"
+							></div>
+						</div>
+					</div>
+					<div class="table git-info">
+						<div class="table-info">
+							<div class="table-label">Git Branch</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/BuildData/git-branch"
+								id="git-branch-area"
+							></div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Git Hash</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/BuildData/git-desc"
+								id="git-hash-area"
+							></div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Test</div>
+							<div
+								class="table-area dub-text"
+								data-key="/SmartDashboard/Test/test"
+								id="ntmtst"
+							>
+								idiot
+							</div>
+						</div>
+					</div>
 
-          <div class="table nt-info">
-            <div class="table-info">
-              <div class="table-label">NT Websocket</div>
-              <div id="connectstate" class="table-area">Unknown</div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Robot State</div>
-              <div id="robotstate" class="table-area">Unknown</div>
-            </div>
-            <div class="table-info">
-              <div class="table-label">Address</div>
-              <div id="robotAddress" class="table-area">Disconnected</div>
-            </div>
-          </div>
-        </div>
+					<div class="table nt-info">
+						<div class="table-info">
+							<div class="table-label">NT Websocket</div>
+							<div id="connectstate" class="table-area">
+								Unknown
+							</div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Robot State</div>
+							<div id="robotstate" class="table-area">
+								Unknown
+							</div>
+						</div>
+						<div class="table-info">
+							<div class="table-label">Address</div>
+							<div id="robotAddress" class="table-area">
+								Disconnected
+							</div>
+						</div>
+					</div>
+				</div>
 
-        <div id="aut-sel"></div>
+				<div id="aut-sel"></div>
 
-        <div id="info-field">
-          <div class="left-diff-container"></div>
-          <div id="info-field-canvas"></div>
-          <div class="right-diff-container"></div>
-        </div>
+				<div id="info-field">
+					<div class="left-diff-container"></div>
+					<div id="info-field-canvas"></div>
+					<div class="right-diff-container"></div>
+				</div>
 
-        <div id="raw-nt">
-          <div id="raw-title">Raw NT Table</div>
-          <div id="nt">
-            <div class="table"></div>
-          </div>
-        </div>
-      </main>
-    </div>
+				<div id="raw-nt">
+					<div id="raw-title">Raw NT Table</div>
+					<div id="nt">
+						<div class="table"></div>
+					</div>
+				</div>
+			</main>
+		</div>
 
-    <script src="./jquery.js"></script>
-    <script src="./p5.min.js"></script>
-    <p></p>
-    <script src="./main.js" type="module"></script>
-  </body>
+		<footer>
+			<img src="./assets/text1.svg" alt="text-pink" class="p-sw-text" />
+			<label for="p-sw" id="p-sw-l">
+				<input type="checkbox" id="p-sw" />
+				<span id="p-sw-s"></span>
+			</label>
+		</footer>
+
+		<script src="./jquery.js"></script>
+		<script src="./p5.min.js"></script>
+		<p></p>
+		<script src="./main.js" type="module"></script>
+	</body>
 </html>
