fixed autonomous selector buttons

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -145,6 +145,7 @@
 		</footer>
 
 		<script src="./jquery.js"></script>
+		<script src="./d3.min.js"></script>
 		<script src="./p5.min.js"></script>
 		<p></p>
 		<script src="./main.js" type="module"></script>
