--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -137,6 +137,16 @@
 		</div>
 
 		<footer>
+			<img
+				src="./assets/text2.svg"
+				alt="text-epilepsy"
+				class="e-sw-text"
+			/>
+			<label for="e-sw" id="e-sw-l">
+				<input type="checkbox" id="e-sw" />
+				<span id="e-sw-s"></span>
+			</label>
+			<div style="flex: 5"></div>
 			<img src="./assets/text1.svg" alt="text-pink" class="p-sw-text" />
 			<label for="p-sw" id="p-sw-l">
 				<input type="checkbox" id="p-sw" />
