--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -86,13 +86,9 @@
 							></div>
 						</div>
 						<div class="table-info">
-							<div class="table-label">Test</div>
-							<div
-								class="table-area dub-text"
-								data-key="/SmartDashboard/Test/test"
-								id="ntmtst"
-							>
-								idiot
+							<div class="table-label">Dash Hash™</div>
+							<div class="table-area">
+								<p id="dash-hash">idiot</p>
 							</div>
 						</div>
 					</div>
