--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>1721 Dashboard</title>
-        <link rel="stylesheet" href="./style.sass" />
+        <link rel="stylesheet" href="./style.scss" />
         <link
             rel="shortcut icon"
             href="./assets/frc1721.svg"
@@ -11,144 +11,111 @@
         />
     </head>
     <body>
-        <header class="header">
-            <img
-                src="./assets/frc1721.svg"
-                alt="Team 1721 Logo"
-                class="header-logo"
-            />
-            <img
-                src="./assets/frc1721.svg"
-                alt="Team 1721 Logo"
-                class="header-logo"
-            />
-            <img
-                src="./assets/frc1721.svg"
-                alt="Team 1721 Logo"
-                class="header-logo"
-            />
+        <header>
+            <img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
+            <img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
+            <img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
             <p class="header-text">TEAM 1721 ---<>--- DASHBOARD</p>
-        </header>
-
-        <div class="main-wrapper">
-            <main>
-                <input
-                    type="range"
-                    id="sd-test"
-                    class="dub-slider"
-                    min="0"
-                    max="4"
-                    data-key="/SmartDashboard/Test/test"
-                />
-
-                <div id="info-one">
-                    <div class="table build-info">
-                        <div class="table-info">
-                            <div class="table-label">Build Date</div>
-                            <div
-                                class="table-area dub-text"
-                                data-key="/SmartDashboard/BuildData/deploy-date"
-                                id="build-date-area"
-                            ></div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Build Host</div>
-                            <div
-                                class="table-area dub-text"
-                                data-key="/SmartDashboard/BuildData/deploy-host"
-                                id="build-host-area"
-                            ></div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Builder</div>
-                            <div
-                                class="table-area dub-text"
-                                data-key="/SmartDashboard/BuildData/deploy-user"
-                                id="builder-area"
-                            ></div>
-                        </div>
-                    </div>
-                    <div class="table git-info">
-                        <div class="table-info">
-                            <div class="table-label">Git Branch</div>
-                            <div
-                                class="table-area dub-text"
-                                data-key="/SmartDashboard/BuildData/git-branch"
-                                id="git-branch-area"
-                            ></div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Git Hash</div>
-                            <div
-                                class="table-area dub-text"
-                                data-key="/SmartDashboard/BuildData/git-desc"
-                                id="git-hash-area"
-                            ></div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Dash Hash™</div>
-                            <div class="table-area">
-                                <p id="dash-hash">idiot</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="table nt-info">
-                        <div class="table-info">
-                            <div class="table-label">NT Websocket</div>
-                            <div id="connectstate" class="table-area">
-                                Unknown
-                            </div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Robot State</div>
-                            <div id="robotstate" class="table-area">
-                                Unknown
-                            </div>
-                        </div>
-                        <div class="table-info">
-                            <div class="table-label">Address</div>
-                            <div id="robotAddress" class="table-area">
-                                Disconnected
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="aut-sel"></div>
-
-                <div id="info-field">
-                    <div class="left-diff-container"></div>
-                    <div id="info-field-canvas"></div>
-                    <div class="right-diff-container"></div>
-                </div>
-
-                <div id="raw-nt">
-                    <div id="raw-title">Raw NT Table</div>
-                    <div id="nt">
-                        <div class="table"></div>
-                    </div>
-                </div>
-            </main>
-        </div>
-
-        <footer>
-            <img
-                src="./assets/text2.svg"
-                alt="text-epilepsy"
-                class="e-sw-text"
-            />
-            <label for="e-sw" id="e-sw-l">
-                <input type="checkbox" id="e-sw" />
-                <span id="e-sw-s"></span>
-            </label>
             <div style="flex: 5"></div>
-            <img src="./assets/text1.svg" alt="text-pink" class="p-sw-text" />
             <label for="p-sw" id="p-sw-l">
                 <input type="checkbox" id="p-sw" />
                 <span id="p-sw-s"></span>
             </label>
-        </footer>
+        </header>
+
+        <main>
+            <div class="sen-tables">
+                <div class="table build-info">
+                    <div class="table-info">
+                        <div class="table-label">Build Date</div>
+                        <div
+                            class="table-area dub-text"
+                            data-key="/SmartDashboard/BuildData/deploy-date"
+                            id="build-date-area"
+                        ></div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Build Host</div>
+                        <div
+                            class="table-area dub-text"
+                            data-key="/SmartDashboard/BuildData/deploy-host"
+                            id="build-host-area"
+                        ></div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Builder</div>
+                        <div
+                            class="table-area dub-text"
+                            data-key="/SmartDashboard/BuildData/deploy-user"
+                            id="builder-area"
+                        ></div>
+                    </div>
+                </div>
+                <div class="table git-info">
+                    <div class="table-info">
+                        <div class="table-label">Git Branch</div>
+                        <div
+                            class="table-area dub-text"
+                            data-key="/SmartDashboard/BuildData/git-branch"
+                            id="git-branch-area"
+                        ></div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Git Hash</div>
+                        <div
+                            class="table-area dub-text"
+                            data-key="/SmartDashboard/BuildData/git-desc"
+                            id="git-hash-area"
+                        ></div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Dash Hash™</div>
+                        <div class="table-area">
+                            <p id="dash-hash">idiot</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="table nt-info">
+                    <div class="table-info">
+                        <div class="table-label">NT Websocket</div>
+                        <div id="connectstate" class="table-area">Unknown</div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Robot State</div>
+                        <div id="robotstate" class="table-area">Unknown</div>
+                    </div>
+                    <div class="table-info">
+                        <div class="table-label">Address</div>
+                        <div id="robotAddress" class="table-area">
+                            Disconnected
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="aut-sel"></div>
+
+            <div class="spacer"></div>
+
+            <div class="test1"></div>
+            <div class="test2"></div>
+
+            <div class="cameras">
+                <div id="cam1"></div>
+                <div class="cam1-text">10.17.21.11</div>
+                <div id="cam2"></div>
+                <div class="cam2-text">10.17.21.13</div>
+            </div>
+
+            <div id="field-canvas"></div>
+        </main>
+
+        <div id="raw-nt">
+            <div id="raw-title">Raw NT Table</div>
+            <div id="nt">
+                <div class="table"></div>
+            </div>
+        </div>
 
         <script src="./jquery.js"></script>
         <script src="./d3.min.js"></script>
