--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -69,10 +69,8 @@
                         ></div>
                     </div>
                     <div class="table-info">
-                        <div class="table-label">Dash Hash™</div>
-                        <div class="table-area">
-                            <p id="dash-hash">idiot</p>
-                        </div>
+                        <div id="dash-hash" class="table-label">Dash Hash™</div>
+                        <div class="table-area">idiot-dash-hash</div>
                     </div>
                 </div>
                 <div class="table nt-info">
