changed styling for sen-tables

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -69,8 +69,10 @@
                         ></div>
                     </div>
                     <div class="table-info">
-                        <div id="dash-hash" class="table-label">Dash Hash™</div>
-                        <div class="table-area">idiot-dash-hash</div>
+                        <div class="table-label">Dash Hash™</div>
+                        <div id="dash-hash" class="table-area">
+                            idiot-dash-hash
+                        </div>
                     </div>
                 </div>
                 <div class="table nt-info">
