fix camera, diff drive viewer

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -13,7 +13,9 @@
 	<body>
 		<header>
 			<img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
-			<img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
+			<a href="./hello.html">
+				<img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
+			</a>
 			<img src="./assets/frc1721.svg" alt="Team 1721 Logo" />
 			<p class="header-text">TEAM 1721 ---<>--- DASHBOARD</p>
 			<div style="flex: 5"></div>
@@ -116,10 +118,8 @@
 			</div>
 
 			<div class="cameras">
-				<div id="cam1"></div>
+				<img class="" src="http://10.17.21.11:5800" />
 				<div class="cam1-text">10.17.21.11</div>
-				<div id="cam2"></div>
-				<div class="cam2-text">10.17.21.13</div>
 			</div>
 
 			<div id="field-canvas"></div>
