make second camera area square

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -122,7 +122,7 @@
 
 			<div class="cameras">
 				<img src="http://10.17.21.11:5800" onerror="this.onerror=null; this.src='assets/error.png'"/>
-				<img src="assets/bitmap.png" alt="CAMERA NUMBER 2" />
+				<img src="assets/drawing.svg" alt="CAMERA NUMBER 2" />
 			</div>
 
 			<div id="field-canvas"></div>
