change picture on error

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -121,8 +121,8 @@
 			</div>
 
 			<div class="cameras">
-				<img src="http://10.17.21.11:5800" onerror="this.onerror=null; this.src='assets/error.png'"/>
-				<img src="assets/drawing.svg" alt="CAMERA NUMBER 2" />
+				<img id="cam1" src="http://10.17.21.11:5800" />
+				<img id="cam2" src="assets/drawing.svg" alt="CAMERA NUMBER 2" />
 			</div>
 
 			<div id="field-canvas"></div>
