Major refactor after week0 (#26)
* Update images and correct config docs

* Bump BOM

* fix for #25

* switching branches

* week 0 YAY with a func robot

* rope broke

* end no more touching

* fix camera, diff drive viewer

* Remove unused commands

* Segfaults

* Still erroring on button commands

* comment bump

* Refactor arm

* Still broken

* Meter rotations

* Robot needs manual override

* Add manual zero command

* Solid implementation

* Fix for #27

* Fix for #27 (again)

* Bump readme

* You can now drive the robot with WSAD

* Dont trust grep

* Fix one bug in dashboard and make another

* Add arm subsystem and photos to robot manual

* More photos

* New camera photos

* Remove junk

* For some reason line 15 in rio/autonomous/backAuto.py errors out the entire robot code

* still has that prevously mentioned error but is formated better

* make camer bigger, temps smaller

* this will stop the crashing

* make second camera area square

* change picture on error

* it no longer crashes due to better implenentation

* can't fast forward so did it manually

* some debug stuff becuase it is running but isn't moving

* add a manual driving in auto func for the correct amount of time

* this fixes it in auto but breaks it in teleop

* Merging this to main

---------

Co-authored-by: kredcool <kredcool2007@outlook.com>
Co-authored-by: dublUayaychtee <mail@dublu.net>

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -108,6 +108,9 @@
 					<div id="L2"></div>
 				</div>
 				<div id="Claw"></div>
+				<div class="spacer-temp">
+
+				</div>
 				<div class="test2">
 					<div class="diff diffR diffF"></div>
 					<div class="diff diffR diffM"></div>
@@ -118,8 +121,8 @@
 			</div>
 
 			<div class="cameras">
-				<img class="" src="http://10.17.21.11:5800" />
-				<div class="cam1-text">10.17.21.11</div>
+				<img id="cam1" src="http://10.17.21.11:5800" />
+				<img id="cam2" src="assets/drawing.svg" alt="CAMERA NUMBER 2" />
 			</div>
 
 			<div id="field-canvas"></div>
