add second camera and fix diff view

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -122,7 +122,7 @@
 
 			<div class="cameras">
 				<img id="cam1" src="http://10.17.21.11:5800" />
-				<img id="cam2" src="assets/drawing.svg" alt="CAMERA NUMBER 2" />
+				<img id="cam2" src="http://10.17.21.2:1181/stream.mjpg" alt="CAMERA NUMBER 2" />
 			</div>
 
 			<div id="field-canvas"></div>
